--- a/Connections/Incoming/3x05.md
+++ b/Connections/Incoming/3x05.md
@@ -1,1 +1,44 @@
+🔗 **Связи для блока `3.5 Движок UDF` (`udf_engine`)**
+📦 Пакет: `3. SQL и Языки`
+
+---
+
+### 🔻 Исходящие связи (`udf_engine --> X`)
+
+| Направление                        | Целевой блок                                    | Назначение |
+| ---------------------------------- | ----------------------------------------------- | ---------- |
+| `udf_engine --> udf_sandbox`       | Изолированное выполнение UDF в безопасной среде |            |
+| `udf_engine --> plugin_loader`     | Загрузка внешних расширений                     |            |
+| `udf_engine --> access_control`    | Ограничение прав выполнения UDF                 |            |
+| `udf_engine --> structured_logger` | Логирование вызовов UDF                         |            |
+| `udf_engine --> tracing_agent`     | Трассировка вызовов UDF                         |            |
+| `udf_engine --> pl_lang_runtime`   | Интеграция с процедурами/функциями              |            |
+| `udf_engine --> arrow_executor`    | Поддержка UDF в колоночных вычислениях          |            |
+
+---
+
+### 🔺 Входящие связи (`X --> udf_engine`)
+
+| Источник                         | Назначение                                          |
+| -------------------------------- | --------------------------------------------------- |
+| `sql_executor --> udf_engine`    | Вызов UDF в выражениях SELECT/WHERE                 |
+| `sql_optimizer --> udf_engine`   | Встраивание UDF в план запроса                      |
+| `sql_planner --> udf_engine`     | Распознавание вызовов и проверка сигнатур           |
+| `pl_lang_runtime --> udf_engine` | Вызовы UDF из процедур                              |
+| `graphql_api --> udf_engine`     | Расширение API-функциями                            |
+| `rest_api --> udf_engine`        | Динамические UDF-расширения                         |
+| `etl_engine --> udf_engine`      | Использование UDF при загрузке/трансформации данных |
+
+---
+
+### 🧩 Всего связей: **14**
+
+* Исходящие: **7**
+* Входящие: **7**
+
+---
+
+✅ Блок `3.5 Движок UDF` — обеспечивает **выполнение пользовательских функций**, написанных на Lua, JS, C или WASM. Он важен для расширяемости СУБД и аналитических сценариев, требует sandbox-безопасности и интеграции с исполнением SQL/ETL/REST.
+
+Готов перейти к блоку `3.6 PL/SQL рантайм` — напиши `да`.
 
