--- a/Connections/Incoming/3x06.md
+++ b/Connections/Incoming/3x06.md
@@ -1,1 +1,44 @@
+🔗 **Связи для блока `3.6 PL/SQL рантайм` (`pl_lang_runtime`)**
+📦 Пакет: `3. SQL и Языки`
+
+---
+
+### 🔻 Исходящие связи (`pl_lang_runtime --> X`)
+
+| Направление                             | Целевой блок                                 | Назначение |
+| --------------------------------------- | -------------------------------------------- | ---------- |
+| `pl_lang_runtime --> sql_executor`      | Вызов SQL из процедур (SELECT/INSERT/UPDATE) |            |
+| `pl_lang_runtime --> udf_engine`        | Вызов пользовательских функций               |            |
+| `pl_lang_runtime --> access_control`    | Контроль прав на вызов процедур              |            |
+| `pl_lang_runtime --> structured_logger` | Логирование исполнения                       |            |
+| `pl_lang_runtime --> tracing_agent`     | Трассировка процедур                         |            |
+| `pl_lang_runtime --> schema_evolver`    | Возможность создания/удаления объектов (DDL) |            |
+| `pl_lang_runtime --> mutation_coverage` | Поддержка мутационного тестирования          |            |
+| `pl_lang_runtime --> ci_cd_runner`      | Запуск unit/integration-тестов процедур      |            |
+| `pl_lang_runtime --> audit_logger`      | Лог аудита вызовов процедур                  |            |
+
+---
+
+### 🔺 Входящие связи (`X --> pl_lang_runtime`)
+
+| Источник                               | Назначение                                   |
+| -------------------------------------- | -------------------------------------------- |
+| `sql_executor --> pl_lang_runtime`     | Вызов триггеров и процедур из SQL            |
+| `rest_api --> pl_lang_runtime`         | Исполнение процедур через API                |
+| `graphql_api --> pl_lang_runtime`      | Выполнение бизнес-логики в процедурах        |
+| `udf_engine --> pl_lang_runtime`       | Вызов процедур из UDF                        |
+| `dsl_engine --> pl_lang_runtime`       | DSL-транзакции в виде процедур               |
+| `etl_engine --> pl_lang_runtime`       | Обработка при загрузке/преобразовании данных |
+| `recovery_service --> pl_lang_runtime` | Повтор вызовов процедур при восстановлении   |
+
+---
+
+### 🧩 Всего связей: **16**
+
+* Исходящие: **9**
+* Входящие: **7**
+
+---
+
+✅ Блок `3.6 PL/SQL рантайм` — исполняет процедурный код (процедуры, триггеры, хуки) с полной поддержкой SQL, DML, DDL и UDF, включая контроль доступа, трассировку и интеграцию с DevOps. Это один из ключевых компонентов для построения сложной бизнес-логики и транзакционной автоматизации.
 
