--- a/Connections/Incoming/3x07.md
+++ b/Connections/Incoming/3x07.md
@@ -1,1 +1,42 @@
+🔗 **Связи для блока `3.7 DSL-движок` (`dsl_engine`)**
+📦 Пакет: `3. SQL и Языки`
+
+---
+
+### 🔻 Исходящие связи (`dsl_engine --> X`)
+
+| Направление                         | Целевой блок                                 | Назначение |
+| ----------------------------------- | -------------------------------------------- | ---------- |
+| `dsl_engine --> sql_executor`       | Генерация SQL на лету и исполнение           |            |
+| `dsl_engine --> pl_lang_runtime`    | Вызов процедур в DSL-сценариях               |            |
+| `dsl_engine --> udf_engine`         | Использование пользовательских функций       |            |
+| `dsl_engine --> dsl_task_scheduler` | Планирование DSL-задач                       |            |
+| `dsl_engine --> access_control`     | Ограничение прав на выполнение DSL-команд    |            |
+| `dsl_engine --> structured_logger`  | Журналирование DSL-инструкций                |            |
+| `dsl_engine --> tracing_agent`      | Трассировка пользовательских сценариев       |            |
+| `dsl_engine --> mutation_coverage`  | Генерация тестов на основе DSL-представлений |            |
+
+---
+
+### 🔺 Входящие связи (`X --> dsl_engine`)
+
+| Источник                            | Назначение                                    |
+| ----------------------------------- | --------------------------------------------- |
+| `rest_api --> dsl_engine`           | Получение DSL-сценариев через HTTP            |
+| `graphql_api --> dsl_engine`        | Обработка DSL через GraphQL-интерфейс         |
+| `cli_shell --> dsl_engine`          | Выполнение DSL-команд в CLI                   |
+| `etl_engine --> dsl_engine`         | Использование DSL при описании ETL-пайплайнов |
+| `plugin_loader --> dsl_engine`      | Загрузка пользовательских DSL-расширений      |
+| `dsl_task_scheduler --> dsl_engine` | Периодический запуск DSL-логики               |
+
+---
+
+### 🧩 Всего связей: **14**
+
+* Исходящие: **8**
+* Входящие: **6**
+
+---
+
+✅ Блок `3.7 DSL-движок` — предоставляет абстрактный транзакционный язык (в духе ABAP/PL), который транслируется в SQL/процедуры/UDF. Он важен для кастомизации, ERP-сценариев и бизнес-логики уровня приложений.
 
