--- a/Connections/Incoming/3x08.md
+++ b/Connections/Incoming/3x08.md
@@ -1,1 +1,43 @@
+🔗 **Связи для блока `3.8 Аналитический движок` (`analytic_engine`)**
+📦 Пакет: `3. SQL и Языки`
 
+---
+
+### 🔻 Исходящие связи (`analytic_engine --> X`)
+
+| Направление                               | Целевой блок                                   | Назначение |
+| ----------------------------------------- | ---------------------------------------------- | ---------- |
+| `analytic_engine --> sql_executor`        | Использование SQL-функций для аналитики        |            |
+| `analytic_engine --> arrow_runtime`       | Векторные вычисления и колоночные агрегаты     |            |
+| `analytic_engine --> ml_runtime`          | Обработка результатов ML-пайплайнов            |            |
+| `analytic_engine --> analytics_functions` | Расширенные функции: ранги, перцентили и пр.   |            |
+| `analytic_engine --> plan_cache`          | Кэширование аналитических планов               |            |
+| `analytic_engine --> tracing_agent`       | Трассировка аналитических запросов             |            |
+| `analytic_engine --> structured_logger`   | Логирование аналитических вызовов              |            |
+| `analytic_engine --> htap_manager`        | Поддержка OLAP-операций в HTAP-нагрузке        |            |
+| `analytic_engine --> adaptive_aggregates` | Использование предагрегированных представлений |            |
+
+---
+
+### 🔺 Входящие связи (`X --> analytic_engine`)
+
+| Источник                                 | Назначение                                    |
+| ---------------------------------------- | --------------------------------------------- |
+| `sql_executor --> analytic_engine`       | Передача аналитических подзапросов            |
+| `sql_optimizer --> analytic_engine`      | Оптимизация аналитических выражений           |
+| `materialized_views --> analytic_engine` | Использование аналитики в представлениях      |
+| `rest_api --> analytic_engine`           | Запрос аналитики по API                       |
+| `graphql_api --> analytic_engine`        | Аналитические GraphQL-запросы                 |
+| `etl_engine --> analytic_engine`         | Применение аналитики при трансформации данных |
+| `ml_adapter --> analytic_engine`         | Пост-обработка данных после ML                |
+
+---
+
+### 🧩 Всего связей: **16**
+
+* Исходящие: **9**
+* Входящие: **7**
+
+---
+
+✅ Блок `3.8 Аналитический движок` — реализует продвинутую аналитику SQL уровня SAP HANA, включая оконные функции, адаптивную агрегацию, использование Arrow-потоков и предобработку результатов ML. Он необходим для OLAP/HTAP-нагрузки.
