--- a/Connections/Incoming/4x01.md
+++ b/Connections/Incoming/4x01.md
@@ -1,1 +1,38 @@
+🔗 **Связи для блока `4.1 JDBC-сервер` (`jdbc_server`)**
+📦 Пакет: `4. Интерфейсы и Интеграции`
+
+---
+
+### 🔻 Исходящие связи (`jdbc_server --> X`)
+
+| Направление                           | Целевой блок                                 | Назначение |
+| ------------------------------------- | -------------------------------------------- | ---------- |
+| `jdbc_server --> sql_parser`          | Парсинг SQL-запросов от клиента              |            |
+| `jdbc_server --> sql_executor`        | Выполнение SQL-команд                        |            |
+| `jdbc_server --> access_control`      | Проверка аутентификации и прав               |            |
+| `jdbc_server --> tracing_agent`       | Трассировка JDBC-запросов                    |            |
+| `jdbc_server --> structured_logger`   | Логирование событий подключения              |            |
+| `jdbc_server --> row_col_security`    | Применение row-level/column-level security   |            |
+| `jdbc_server --> plan_cache`          | Использование кэшированных планов запросов   |            |
+| `jdbc_server --> vectorized_executor` | Ускоренное выполнение аналитических запросов |            |
+
+---
+
+### 🔺 Входящие связи (`X --> jdbc_server`)
+
+| Источник                            | Назначение                              |
+| ----------------------------------- | --------------------------------------- |
+| `sql_wire_protocol --> jdbc_server` | Поддержка JDBC как части wire-протокола |
+| `plugin_loader --> jdbc_server`     | Расширения/плагины JDBC-драйвера        |
+
+---
+
+### 🧩 Всего связей: **10**
+
+* Исходящие: **8**
+* Входящие: **2**
+
+---
+
+✅ Блок `4.1 JDBC-сервер` предоставляет поддержку стандартного подключения клиентов Java/BI через JDBC. Является ключевым компонентом для совместимости и интеграции с внешними системами. Он связан с parser/executor, безопасностью, трассировкой и планированием выполнения.
 
