--- a/Connections/Incoming/4x02.md
+++ b/Connections/Incoming/4x02.md
@@ -1,1 +1,38 @@
+🔗 **Связи для блока `4.2 ODBC-шлюз` (`odbc_gateway`)**
+📦 Пакет: `4. Интерфейсы и Интеграции`
+
+---
+
+### 🔻 Исходящие связи (`odbc_gateway --> X`)
+
+| Направление                            | Целевой блок                           | Назначение |
+| -------------------------------------- | -------------------------------------- | ---------- |
+| `odbc_gateway --> sql_parser`          | Парсинг SQL-запросов через ODBC        |            |
+| `odbc_gateway --> sql_executor`        | Исполнение SQL-команд от ODBC-клиентов |            |
+| `odbc_gateway --> access_control`      | Проверка авторизации                   |            |
+| `odbc_gateway --> structured_logger`   | Логирование сессий и запросов          |            |
+| `odbc_gateway --> tracing_agent`       | Трассировка соединений                 |            |
+| `odbc_gateway --> plan_cache`          | Повторное использование планов         |            |
+| `odbc_gateway --> row_col_security`    | Ограничения на строки/колонки          |            |
+| `odbc_gateway --> vectorized_executor` | Эффективное выполнение запросов        |            |
+
+---
+
+### 🔺 Входящие связи (`X --> odbc_gateway`)
+
+| Источник                             | Назначение                             |
+| ------------------------------------ | -------------------------------------- |
+| `sql_wire_protocol --> odbc_gateway` | Поддержка протокола ODBC               |
+| `plugin_loader --> odbc_gateway`     | Плагины и расширения для ODBC-драйвера |
+
+---
+
+### 🧩 Всего связей: **10**
+
+* Исходящие: **8**
+* Входящие: **2**
+
+---
+
+✅ Блок `4.2 ODBC-шлюз` обеспечивает кросс-платформенное подключение с BI-инструментами, Excel, внешними системами через стандарт ODBC. Полностью аналогичен по структуре `JDBC-серверу`, но для нативных клиентов Windows/Linux.
 
