--- a/Connections/Incoming/4x03.md
+++ b/Connections/Incoming/4x03.md
@@ -1,1 +1,44 @@
+🔗 **Связи для блока `4.3 REST API` (`rest_api`)**
+📦 Пакет: `4. Интерфейсы и Интеграции`
+
+---
+
+### 🔻 Исходящие связи (`rest_api --> X`)
+
+| Направление                      | Целевой блок                              | Назначение |
+| -------------------------------- | ----------------------------------------- | ---------- |
+| `rest_api --> sql_parser`        | Обработка SQL-запросов из REST            |            |
+| `rest_api --> sql_executor`      | Выполнение REST-запросов к БД             |            |
+| `rest_api --> access_control`    | Аутентификация и авторизация (JWT / mTLS) |            |
+| `rest_api --> structured_logger` | Аудит REST-запросов                       |            |
+| `rest_api --> tracing_agent`     | Трассировка HTTP-запросов                 |            |
+| `rest_api --> row_col_security`  | Ограничения безопасности данных           |            |
+| `rest_api --> analytic_engine`   | Выполнение REST-аналитики                 |            |
+| `rest_api --> json_store`        | REST-доступ к JSON-документам             |            |
+| `rest_api --> openapi_doc`       | Генерация документации                    |            |
+| `rest_api --> audit_logger`      | REST-операции входят в аудит              |            |
+| `rest_api --> udf_engine`        | Вызов UDF через REST (например, Lua, JS)  |            |
+| `rest_api --> grpc_interface`    | Маршрутизация или fallback на gRPC        |            |
+
+---
+
+### 🔺 Входящие связи (`X --> rest_api`)
+
+| Источник                      | Назначение                      |
+| ----------------------------- | ------------------------------- |
+| `external_hooks --> rest_api` | Обработка webhook-запросов      |
+| `etl_engine --> rest_api`     | Вызовы REST в ETL-цепочках      |
+| `graphql_api --> rest_api`    | REST fallback при complex query |
+| `openapi_doc --> rest_api`    | Автоэкспозиция REST-интерфейсов |
+
+---
+
+### 🧩 Всего связей: **15**
+
+* Исходящие: **12**
+* Входящие: **3**
+
+---
+
+✅ Блок `4.3 REST API` обеспечивает универсальный способ взаимодействия с СУБД через HTTP/JSON, включая запросы, управление схемой, аналитику, вызов процедур и доступ к UDF. Он связан с безопасностью, логированием, аналитикой и документоориентированным хранилищем.
 
