--- a/Connections/Incoming/4x04.md
+++ b/Connections/Incoming/4x04.md
@@ -1,1 +1,42 @@
+🔗 **Связи для блока `4.4 GraphQL API` (`graphql_api`)**
+📦 Пакет: `4. Интерфейсы и Интеграции`
+
+---
+
+### 🔻 Исходящие связи (`graphql_api --> X`)
+
+| Направление                           | Целевой блок                                       | Назначение |
+| ------------------------------------- | -------------------------------------------------- | ---------- |
+| `graphql_api --> sql_parser`          | Трансляция GraphQL в SQL для запросов              |            |
+| `graphql_api --> sql_executor`        | Выполнение запросов GraphQL через SQL              |            |
+| `graphql_api --> json_store`          | Чтение/запись JSON-объектов                        |            |
+| `graphql_api --> access_control`      | Проверка прав доступа (RBAC/ABAC)                  |            |
+| `graphql_api --> structured_logger`   | Логирование запросов GraphQL                       |            |
+| `graphql_api --> tracing_agent`       | Отслеживание GraphQL-трассировки                   |            |
+| `graphql_api --> analytic_engine`     | Обработка агрегаций, вложенных структур            |            |
+| `graphql_api --> rest_api`            | Fallback на REST при нестандартных операциях       |            |
+| `graphql_api --> udf_engine`          | Вызов UDF (например, предобработка запроса)        |            |
+| `graphql_api --> row_col_security`    | Применение ограничений видимости                   |            |
+| `graphql_api --> plan_cache`          | Использование закэшированных планов выполнения     |            |
+| `graphql_api --> vectorized_executor` | Эффективное выполнение агрегатных GraphQL-запросов |            |
+
+---
+
+### 🔺 Входящие связи (`X --> graphql_api`)
+
+| Источник                        | Назначение                            |
+| ------------------------------- | ------------------------------------- |
+| `plugin_loader --> graphql_api` | Динамические GraphQL-расширения       |
+| `openapi_doc --> graphql_api`   | Генерация схемы GraphQL по метаданным |
+
+---
+
+### 🧩 Всего связей: **14**
+
+* Исходящие: **12**
+* Входящие: **2**
+
+---
+
+✅ Блок `4.4 GraphQL API` предоставляет декларативный и гибкий интерфейс для доступа к данным с возможностью выбора полей, вложенных структур, агрегаций и вызова UDF. Он особенно полезен для frontend- и BI-решений. Полностью интегрирован с SQL-ядерными модулями, безопасностью и логированием.
 
