--- a/Connections/Incoming/4x05.md
+++ b/Connections/Incoming/4x05.md
@@ -1,1 +1,45 @@
+🔗 **Связи для блока `4.5 gRPC-интерфейс` (`grpc_interface`)**
+📦 Пакет: `4. Интерфейсы и Интеграции`
+
+---
+
+### 🔻 Исходящие связи (`grpc_interface --> X`)
+
+| Направление                            | Целевой блок                                  | Назначение |
+| -------------------------------------- | --------------------------------------------- | ---------- |
+| `grpc_interface --> sql_parser`        | Обработка SQL-запросов, полученных через gRPC |            |
+| `grpc_interface --> sql_executor`      | Выполнение команд от gRPC-клиентов            |            |
+| `grpc_interface --> access_control`    | Аутентификация (mTLS/JWT) и авторизация       |            |
+| `grpc_interface --> structured_logger` | Логирование gRPC-вызовов                      |            |
+| `grpc_interface --> tracing_agent`     | Полная трассировка gRPC-вызовов               |            |
+| `grpc_interface --> plan_cache`        | Повторное использование планов выполнения     |            |
+| `grpc_interface --> udf_engine`        | Вызов пользовательских функций по gRPC        |            |
+| `grpc_interface --> row_col_security`  | Применение политик безопасности на данные     |            |
+| `grpc_interface --> analytic_engine`   | Аналитические gRPC-запросы                    |            |
+| `grpc_interface --> json_store`        | Работа с JSON-объектами через бинарный канал  |            |
+| `grpc_interface --> instant_snapshot`  | Получение snapshot-данных в потоке            |            |
+| `grpc_interface --> arrow_executor`    | Высокопроизводительный двоичный поток (Arrow) |            |
+
+---
+
+### 🔺 Входящие связи (`X --> grpc_interface`)
+
+| Источник                            | Назначение                                    |
+| ----------------------------------- | --------------------------------------------- |
+| `external_hooks --> grpc_interface` | Внешние события с gRPC-триггерами             |
+| `etl_engine --> grpc_interface`     | Вызов gRPC-пайплайнов из ETL                  |
+| `rest_api --> grpc_interface`       | Fallback на gRPC для бинарных/stream операций |
+| `raft_engine --> grpc_interface`    | Внутренние коммуникации для консенсуса        |
+| `json_api --> grpc_interface`       | Вызовы через JSON → gRPC маппинг              |
+
+---
+
+### 🧩 Всего связей: **17**
+
+* Исходящие: **12**
+* Входящие: **5**
+
+---
+
+✅ Блок `4.5 gRPC-интерфейс` обеспечивает **высокопроизводительный двоичный канал** с поддержкой multiplexing, стриминга и авторизации. Ключевой компонент для микросервисной интеграции, inter-node связи (включая Raft), внешних клиентов и потоковой аналитики.
 
