--- a/Connections/Incoming/4x06.md
+++ b/Connections/Incoming/4x06.md
@@ -1,1 +1,44 @@
+🔗 **Связи для блока `4.6 CLI-оболочка` (`cli_shell`)**
+📦 Пакет: `4. Интерфейсы и Интеграции`
 
+---
+
+### 🔻 Исходящие связи (`cli_shell --> X`)
+
+| Направление                         | Целевой блок                              | Назначение |
+| ----------------------------------- | ----------------------------------------- | ---------- |
+| `cli_shell --> sql_parser`          | Обработка SQL-запросов, введённых вручную |            |
+| `cli_shell --> sql_executor`        | Выполнение команд через терминал          |            |
+| `cli_shell --> access_control`      | Аутентификация пользователя               |            |
+| `cli_shell --> structured_logger`   | Логирование действий сессии               |            |
+| `cli_shell --> tracing_agent`       | Трассировка пользовательских сессий       |            |
+| `cli_shell --> udf_engine`          | Запуск пользовательских функций через CLI |            |
+| `cli_shell --> dsl_engine`          | Запуск DSL-скриптов                       |            |
+| `cli_shell --> pl_lang_runtime`     | Вызов процедур на встроенном языке        |            |
+| `cli_shell --> versioned_tables`    | Доступ к версии таблиц через CLI          |            |
+| `cli_shell --> wal_manager`         | Инспекция журнала транзакций              |            |
+| `cli_shell --> schema_evolver`      | Управление схемой через команды           |            |
+| `cli_shell --> buffer_pool`         | Диагностика буферного пула                |            |
+| `cli_shell --> prometheus_exporter` | Получение метрик прямо из CLI             |            |
+| `cli_shell --> ci_cd_runner`        | Запуск тестов или миграций вручную        |            |
+
+---
+
+### 🔺 Входящие связи (`X --> cli_shell`)
+
+| Источник                           | Назначение                                     |
+| ---------------------------------- | ---------------------------------------------- |
+| `dsl_task_scheduler --> cli_shell` | Запуск CLI-команд из DSL-задач                 |
+| `external_hooks --> cli_shell`     | Обработка скриптов через оболочку              |
+| `etl_engine --> cli_shell`         | Использование CLI для загрузки/выгрузки данных |
+
+---
+
+### 🧩 Всего связей: **17**
+
+* Исходящие: **14**
+* Входящие: **3**
+
+---
+
+✅ `4.6 CLI-оболочка` — это **интерактивный и автоматизированный интерфейс**, необходимый для администрирования, отладки, запуска тестов, миграций, мониторинга и разработок UDF/DSL-процедур. Глубоко интегрирован со всеми слоями архитектуры, включая observability, безопасность и транзакционность.
