--- a/Connections/Incoming/4x07.md
+++ b/Connections/Incoming/4x07.md
@@ -1,1 +1,42 @@
+🔗 **Связи для блока `4.7 Документация OpenAPI` (`openapi_doc`)**
+📦 Пакет: `4. Интерфейсы и Интеграции`
 
+---
+
+### 🔻 Исходящие связи (`openapi_doc --> X`)
+
+| Направление                       | Целевой блок                                 | Назначение |
+| --------------------------------- | -------------------------------------------- | ---------- |
+| `openapi_doc --> rest_api`        | Генерация схем OpenAPI для REST-интерфейсов  |            |
+| `openapi_doc --> graphql_api`     | Документация схем GraphQL                    |            |
+| `openapi_doc --> json_api`        | Документация JSON\:API маршрутов             |            |
+| `openapi_doc --> grpc_interface`  | Генерация описания gRPC-сервисов             |            |
+| `openapi_doc --> udf_engine`      | Документация экспортированных UDF            |            |
+| `openapi_doc --> access_control`  | Указание политик авторизации в документации  |            |
+| `openapi_doc --> pl_lang_runtime` | Документация процедур и триггеров            |            |
+| `openapi_doc --> etl_engine`      | Документация ETL-пайплайнов и хуков          |            |
+| `openapi_doc --> external_hooks`  | Отображение внешних точек интеграции         |            |
+| `openapi_doc --> graphql_api`     | Повторное использование схем и introspection |            |
+| `openapi_doc --> sql_parser`      | Генерация SQL-грамматики и примеров          |            |
+| `openapi_doc --> json_store`      | Документация по работе с JSON-объектами      |            |
+
+---
+
+### 🔺 Входящие связи (`X --> openapi_doc`)
+
+| Источник                      | Назначение                         |
+| ----------------------------- | ---------------------------------- |
+| `cli_shell --> openapi_doc`   | Просмотр документации из терминала |
+| `rest_api --> openapi_doc`    | Предоставление Swagger-интерфейса  |
+| `graphql_api --> openapi_doc` | Поддержка introspection-режима     |
+
+---
+
+### 🧩 Всего связей: **15**
+
+* Исходящие: **12**
+* Входящие: **3**
+
+---
+
+✅ `4.7 Документация OpenAPI` — ключевой элемент **self-documented API-интерфейсов**, покрывающий REST, GraphQL, gRPC и расширения. Поддерживает автоматическую генерацию схем, безопасность, входы/выходы, и облегчает DevOps и интеграцию с внешними системами.
