--- a/Connections/Incoming/4x08.md
+++ b/Connections/Incoming/4x08.md
@@ -1,1 +1,46 @@
+🔗 **Связи для блока `4.8 CDC и стриминг` (`cdc_streaming`)**
+📦 Пакет: `4. Интерфейсы и Интеграции`
+
+---
+
+### 🔻 Исходящие связи (`cdc_streaming --> X`)
+
+| Направление                          | Целевой блок                                | Назначение |
+| ------------------------------------ | ------------------------------------------- | ---------- |
+| `cdc_streaming --> wal_manager`      | Чтение изменений из WAL для CDC             |            |
+| `cdc_streaming --> snapshot_manager` | Первичная загрузка состояния через snapshot |            |
+| `cdc_streaming --> grpc_interface`   | Отправка изменений по двоичному каналу      |            |
+| `cdc_streaming --> rest_api`         | REST endpoint для подписки на потоки        |            |
+| `cdc_streaming --> json_api`         | Форматирование событий в JSON               |            |
+| `cdc_streaming --> kafka_adapter`    | Потоковая доставка изменений (Kafka/Pulsar) |            |
+| `cdc_streaming --> tracing_agent`    | Трассировка latency публикаций              |            |
+| `cdc_streaming --> audit_logger`     | Журналирование изменений в CDC-потоках      |            |
+| `cdc_streaming --> versioned_tables` | Поддержка версионирования событий           |            |
+| `cdc_streaming --> plan_cache`       | Инвалидация кэша при изменениях             |            |
+| `cdc_streaming --> plugin_loader`    | Обработка событий плагинами                 |            |
+| `cdc_streaming --> access_policies`  | Контроль доступа к CDC-данным               |            |
+| `cdc_streaming --> schema_evolver`   | Обработка событий DDL и миграций            |            |
+
+---
+
+### 🔺 Входящие связи (`X --> cdc_streaming`)
+
+| Источник                                 | Назначение                             |
+| ---------------------------------------- | -------------------------------------- |
+| `etl_engine --> cdc_streaming`           | Использование CDC как источника данных |
+| `external_hooks --> cdc_streaming`       | Обработка событийной модели            |
+| `graphql_api --> cdc_streaming`          | Подписка через GraphQL subscriptions   |
+| `raft_engine --> cdc_streaming`          | Репликация изменений по консенсусу     |
+| `multi_tenant_limiter --> cdc_streaming` | Ограничения публикации по квотам       |
+
+---
+
+### 🧩 Всего связей: **18**
+
+* Исходящие: **13**
+* Входящие: **5**
+
+---
+
+✅ Блок `4.8 CDC и стриминг` — один из ключевых компонентов **реального времени**, обеспечивает Change Data Capture с высокой пропускной способностью, совместим с Kafka, REST и GraphQL Subscriptions. Полностью связан с WAL, снапшотами, безопасностью и схемой.
 
