--- a/Connections/Incoming/4x09.md
+++ b/Connections/Incoming/4x09.md
@@ -1,1 +1,44 @@
+🔗 **Связи для блока `4.9 Загрузчик S3/CSV/Parquet` (`s3_batch_loader`)**
+📦 Пакет: `4. Интерфейсы и Интеграции`
 
+---
+
+### 🔻 Исходящие связи (`s3_batch_loader --> X`)
+
+| Направление                            | Целевой блок                                      | Назначение |
+| -------------------------------------- | ------------------------------------------------- | ---------- |
+| `s3_batch_loader --> row_store`        | Загрузка строковых таблиц                         |            |
+| `s3_batch_loader --> column_store`     | Загрузка колонок из Parquet/ORC                   |            |
+| `s3_batch_loader --> json_store`       | Импорт JSON-файлов                                |            |
+| `s3_batch_loader --> versioned_tables` | Загрузка версионированных данных                  |            |
+| `s3_batch_loader --> schema_evolver`   | Автосоздание/обновление схемы                     |            |
+| `s3_batch_loader --> access_control`   | Проверка прав доступа к S3 и локальным источникам |            |
+| `s3_batch_loader --> etl_engine`       | Использование внутри ETL-конвейеров               |            |
+| `s3_batch_loader --> udf_engine`       | Преобразования и маппинг данных во время загрузки |            |
+| `s3_batch_loader --> wal_manager`      | Логирование вставок как транзакции                |            |
+| `s3_batch_loader --> tracing_agent`    | Отслеживание времени загрузки                     |            |
+| `s3_batch_loader --> buffer_pool`      | Буферизация больших файлов в памяти               |            |
+| `s3_batch_loader --> audit_logger`     | Запись фактов загрузки                            |            |
+| `s3_batch_loader --> quota_manager`    | Проверка квот перед массовой вставкой             |            |
+
+---
+
+### 🔺 Входящие связи (`X --> s3_batch_loader`)
+
+| Источник                             | Назначение                          |
+| ------------------------------------ | ----------------------------------- |
+| `cli_shell --> s3_batch_loader`      | Командная загрузка вручную          |
+| `rest_api --> s3_batch_loader`       | Загрузка через API                  |
+| `etl_engine --> s3_batch_loader`     | Импорт как шаг в pipeline           |
+| `external_hooks --> s3_batch_loader` | Событийный импорт из внешних систем |
+
+---
+
+### 🧩 Всего связей: **17**
+
+* Исходящие: **13**
+* Входящие: **4**
+
+---
+
+✅ Блок `4.9 Загрузчик S3/CSV/Parquet` — критически важен для **batch-загрузки и интеграции с хранилищами данных**, поддерживает автообнаружение схем, контроль доступа, совместим с JSON/CSV/Parquet, используется в CLI, ETL и REST API.
