--- a/Connections/Incoming/4x11.md
+++ b/Connections/Incoming/4x11.md
@@ -1,1 +1,47 @@
+🔗 **Связи для блока `4.11 ETL-движок` (`etl_engine`)**
+📦 Пакет: `4. Интерфейсы и Интеграции`
 
+---
+
+### 🔻 Исходящие связи (`etl_engine --> X`)
+
+| Направление                                                     | Целевой блок                                       | Назначение |
+| --------------------------------------------------------------- | -------------------------------------------------- | ---------- |
+| `etl_engine --> row_store`                                      | Загрузка строковых данных                          |            |
+| `etl_engine --> column_store`                                   | Загрузка колонок из структурированных источников   |            |
+| `etl_engine --> json_store`                                     | Загрузка semi-structured данных                    |            |
+| `etl_engine --> udf_engine`                                     | Вызов пользовательской логики трансформаций        |            |
+| `etl_engine --> external_hooks`                                 | Хуки до/после этапов ETL                           |            |
+| `etl_engine --> s3_batch_loader`                                | Использование как источник                         |            |
+| `etl_engine --> wal_manager`                                    | Логирование вставок и изменений                    |            |
+| `etl_engine --> buffer_pool`                                    | Буферизация ETL-пакетов                            |            |
+| `etl_engine --> schema_evolver`                                 | Автоматическое обновление схемы при трансформациях |            |
+| `etl_engine --> quota_manager`                                  | Проверка квот на загрузку/выгрузку                 |            |
+| `etl_engine --> tracing_agent`                                  | Трассировка всех этапов ETL                        |            |
+| `etl_engine --> audit_logger`                                   | Аудит всех операций загрузки/выгрузки              |            |
+| `etl_engine --> metrics_exporter` (alias `prometheus_exporter`) | Метрики по времени и объёму ETL                    |            |
+| `etl_engine --> access_control`                                 | Верификация пользователя и источников данных       |            |
+
+---
+
+### 🔺 Входящие связи (`X --> etl_engine`)
+
+| Источник                        | Назначение                            |
+| ------------------------------- | ------------------------------------- |
+| `rest_api --> etl_engine`       | Запуск ETL по REST                    |
+| `cli_shell --> etl_engine`      | Запуск вручную через командную строку |
+| `external_hooks --> etl_engine` | Автоматический запуск по событиям     |
+| `cdc_streaming --> etl_engine`  | Построение sink'ов и ETL-пайплайнов   |
+| `schema_evolver --> etl_engine` | Миграции как часть ETL                |
+| `raft_engine --> etl_engine`    | Репликация ETL-сценариев в кластере   |
+
+---
+
+### 🧩 Всего связей: **20**
+
+* Исходящие: **14**
+* Входящие: **6**
+
+---
+
+✅ Блок `4.11 ETL-движок` играет ключевую роль в **преобразовании, загрузке и подготовке данных**, включая поддержку трансформаций, валидаций, буферизации и вызова хуков/UDF. Он тесно связан с безопасностью, журналами и внешними источниками.
