--- a/Connections/Incoming/4x12.md
+++ b/Connections/Incoming/4x12.md
@@ -1,1 +1,51 @@
+🔗 **Связи для блока `4.12 Raft / Consensus Engine` (`raft_engine`)**
+📦 Пакет: `4. Интерфейсы и Интеграции`
 
+---
+
+### 🔻 Исходящие связи (`raft_engine --> X`)
+
+| Направление                           | Целевой блок                                    | Назначение |
+| ------------------------------------- | ----------------------------------------------- | ---------- |
+| `raft_engine --> replication`         | Реализация консенсуса в механизме репликации    |            |
+| `raft_engine --> failover_engine`     | Выбор лидера и активация ноды                   |            |
+| `raft_engine --> crash_recovery`      | Согласованное восстановление по журналу         |            |
+| `raft_engine --> wal_manager`         | Распространение записей WAL между узлами        |            |
+| `raft_engine --> snapshot_manager`    | Координация снимков между лидером и фолловерами |            |
+| `raft_engine --> recovery_service`    | Восстановление состояния после failover         |            |
+| `raft_engine --> ci_cd_runner`        | Распространение конфигураций на кластер         |            |
+| `raft_engine --> structured_logger`   | Логирование действий протокола консенсуса       |            |
+| `raft_engine --> tracing_agent`       | Трассировка Raft-сообщений и heartbeat'ов       |            |
+| `raft_engine --> prometheus_exporter` | Метрики Raft-состояний и ролей                  |            |
+| `raft_engine --> plugin_loader`       | Динамическое подключение провайдеров консенсуса |            |
+| `raft_engine --> etl_engine`          | Репликация ETL-триггеров и пайплайнов           |            |
+| `raft_engine --> access_control`      | Координация прав между узлами (RBAC sync)       |            |
+
+---
+
+### 🔺 Входящие связи (`X --> raft_engine`)
+
+| Источник                          | Назначение                                    |
+| --------------------------------- | --------------------------------------------- |
+| `replication --> raft_engine`     | Использование Raft как backend протокол       |
+| `etl_engine --> raft_engine`      | Синхронизация состояний в кластере            |
+| `plugin_loader --> raft_engine`   | Расширение движка альтернативными протоколами |
+| `cli_shell --> raft_engine`       | Запрос ролей/состояния консенсуса             |
+| `config_loader --> raft_engine`   | Загрузка quorum-параметров и initial peers    |
+| `failover_engine --> raft_engine` | Использование результатов голосования         |
+
+---
+
+### 🧩 Всего связей: **19**
+
+* Исходящие: **13**
+* Входящие: **6**
+
+---
+
+✅ Блок `4.12 Raft / Consensus Engine` — ядро механизма согласованного состояния в распределённой СУБД. Обеспечивает отказоустойчивость, координацию write-ahead логов, миграции и активную репликацию между нодами в режиме **active-active** или **active-passive**.
+
+📌 **Особенности реализации:**
+
+* Использует heartbeat, vote и log replication механизмы.
+* Связан как с хранилищем, так и с управлением пользователями и пайплайнами.
