--- a/Connections/Incoming/5x01.md
+++ b/Connections/Incoming/5x01.md
@@ -1,1 +1,58 @@
+🔗 **Связи для блока `5.1 Материализованные представления` (`materialized_views`)**
+📦 Пакет: `5. BI, ML, OLAP`
 
+---
+
+### 🔻 Исходящие связи (`materialized_views --> X`)
+
+| Целевой блок          | Назначение                             |
+| --------------------- | -------------------------------------- |
+| `sql_executor`        | Использование для запроса/обновления   |
+| `sql_optimizer`       | Информация об актуальности MV          |
+| `index_manager`       | Индексация MV                          |
+| `buffer_pool`         | Буферизация MV в памяти                |
+| `column_store`        | Хранение MV в columnar формате         |
+| `compression_engine`  | Сжатие результатов MV                  |
+| `versioned_tables`    | Поддержка версии MV во времени         |
+| `analytic_engine`     | Использование MV в OLAP                |
+| `adaptive_aggregates` | Построение агрегатов на базе MV        |
+| `etl_engine`          | Обновление MV из внешних источников    |
+| `schema_evolver`      | Изменение схемы MV                     |
+| `plan_cache`          | Кеширование планов с MV                |
+| `tracing_agent`       | Отслеживание времени обновления MV     |
+| `audit_logger`        | Логирование изменений в MV             |
+| `quota_manager`       | Контроль использования ресурсов под MV |
+| `prometheus_exporter` | Метрики обновления MV                  |
+
+---
+
+### 🔺 Входящие связи (`X --> materialized_views`)
+
+| Источник              | Назначение                              |
+| --------------------- | --------------------------------------- |
+| `sql_executor`        | Чтение MV как часть запроса             |
+| `sql_planner`         | Включение MV в план                     |
+| `etl_engine`          | Триггер обновления MV                   |
+| `adaptive_aggregates` | Использование MV как промежуточный слой |
+| `schema_evolver`      | Обновление схемы MV                     |
+| `rest_api`            | Доступ к MV по HTTP                     |
+| `cli_shell`           | Управление MV из консоли                |
+| `replication`         | Репликация MV между узлами              |
+
+---
+
+### 🧩 Всего связей: **23**
+
+* Исходящие: **16**
+* Входящие: **7**
+
+---
+
+✅ Блок `5.1 Материализованные представления` — один из **ключевых механизмов OLAP-аналитики**, обеспечивающий предвычисление агрегатов, повышение производительности запросов и возможность адаптации под HTAP-нагрузку.
+
+📌 **Особенности:**
+
+* Работает поверх column-store;
+* Сильно зависит от MVCC и версионирования;
+* Может иметь TTL/ретеншн политики;
+* Интегрирован с адаптивными агрегатами и планировщиком.
