--- a/Connections/Incoming/5x02.md
+++ b/Connections/Incoming/5x02.md
@@ -1,1 +1,58 @@
+🔗 **Связи для блока `5.2 Адаптивные агрегаты` (`adaptive_aggregates`)**
+📦 Пакет: `5. BI, ML, OLAP`
+
+---
+
+### 🔻 Исходящие связи (`adaptive_aggregates --> X`)
+
+| Целевой блок          | Назначение                                                             |
+| --------------------- | ---------------------------------------------------------------------- |
+| `sql_optimizer`       | Информация о selectivity и reuse агрегатов                             |
+| `sql_executor`        | Использование агрегатов в запросах                                     |
+| `analytic_engine`     | Совместное использование с аналитическими функциями                    |
+| `materialized_views`  | Построение на базе MV                                                  |
+| `column_store`        | Хранение pre-aggregated данных                                         |
+| `plan_cache`          | Кеширование агрегатных планов                                          |
+| `buffer_pool`         | Буферизация агрегатов в памяти                                         |
+| `compression_engine`  | Сжатие агрегатных значений                                             |
+| `quota_manager`       | Контроль использования CPU/Memory на агрегаты                          |
+| `tracing_agent`       | Мониторинг агрегационных узлов в execution graph                       |
+| `audit_logger`        | Логирование вычислений и обновлений агрегатов                          |
+| `etl_engine`          | Загрузка агрегатов из внешних источников или построение ETL-пайплайнов |
+| `schema_evolver`      | Эволюция агрегатов при изменении структуры таблиц                      |
+| `prometheus_exporter` | Экспорт latency/обновлений агрегатов                                   |
+
+---
+
+### 🔺 Входящие связи (`X --> adaptive_aggregates`)
+
+| Источник             | Назначение                                    |
+| -------------------- | --------------------------------------------- |
+| `sql_executor`       | Использование агрегатов в runtime             |
+| `sql_planner`        | Включение агрегатов в план                    |
+| `analytic_engine`    | Расширение сложных агрегаций                  |
+| `materialized_views` | Агрегаты на основе MV                         |
+| `etl_engine`         | Формирование агрегатов из batch-источников    |
+| `schema_evolver`     | Поддержка агрегатов при ALTER TABLE           |
+| `rest_api`           | Доступ к агрегатам по HTTP                    |
+| `cli_shell`          | Управление агрегатами (create, drop, refresh) |
+| `replication`        | Репликация агрегатов по кластерам             |
+
+---
+
+### 🧩 Всего связей: **23**
+
+* Исходящие: **14**
+* Входящие: **9**
+
+---
+
+✅ Блок `5.2 Адаптивные агрегаты` — **динамический механизм предвычисления и повторного использования агрегатов**, критичен для HTAP-нагрузки, BI-дэшбордов и ускорения группировок.
+
+📌 **Особенности:**
+
+* Основан на runtime statistics;
+* Обновляется фоново или при запросах;
+* Может агрегировать по скользящим окнам;
+* Связан с MV, планами запросов и хранилищем.
 
