--- a/Connections/Incoming/5x03.md
+++ b/Connections/Incoming/5x03.md
@@ -1,1 +1,57 @@
+🔗 **Связи для блока `5.3 Обработка временных рядов` (`time_series_engine`)**
+📦 Пакет: `5. BI, ML, OLAP`
+
+---
+
+### 🔻 Исходящие связи (`time_series_engine --> X`)
+
+| Целевой блок          | Назначение                                            |
+| --------------------- | ----------------------------------------------------- |
+| `column_store`        | Хранение временных рядов в колонковом формате         |
+| `sql_executor`        | Выполнение запросов к TS-таблицам                     |
+| `analytic_engine`     | Расширение аналитики над TS (gap-filling, moving avg) |
+| `compression_engine`  | Сжатие TS по delta/RLE/FOR                            |
+| `adaptive_aggregates` | Агрегации по окнам времени                            |
+| `materialized_views`  | Построение MV на основе TS                            |
+| `etl_engine`          | Загрузка временных данных из CSV/S3                   |
+| `buffer_pool`         | Кэширование активных окон TS                          |
+| `plan_cache`          | Кеширование TS-запросов                               |
+| `schema_evolver`      | Модификация TS-схем (partitions, TTL)                 |
+| `tracing_agent`       | Отслеживание latency по окнам времени                 |
+| `audit_logger`        | Логирование операций над TS                           |
+| `quota_manager`       | Контроль IOPS и памяти под high-volume TS             |
+| `rest_api`            | Экспонирование TS API (downsampling и графики)        |
+| `prometheus_exporter` | Мониторинг метрик по временным данным                 |
+| `ml_runtime`          | Использование TS для прогноза / ML-моделей            |
+| `jit_engine`          | Оптимизация повторяющихся паттернов в TS              |
+
+---
+
+### 🔺 Входящие связи (`X --> time_series_engine`)
+
+| Источник                | Назначение                       |
+| ----------------------- | -------------------------------- |
+| `sql_planner`           | Планирование запросов к TS       |
+| `sql_optimizer`         | Выбор индексов/агрегатов по TS   |
+| `etl_engine`            | Подгрузка и обработка TS         |
+| `materialized_views`    | Использование TS как источник MV |
+| `analytics_functions`   | Расширенные функции над TS       |
+| `ml_adapter`            | Подключение к ML-фреймворкам     |
+| `rest_api`, `cli_shell` | Доступ к данным и управлению     |
+| `replication`           | Репликация TS в кластере         |
+
+---
+
+### 🧩 Всего связей: **25**
+
+* Исходящие: **17**
+* Входящие: **8**
+
+---
+
+✅ Блок `5.3 Обработка временных рядов` — **важный элемент для IoT, мониторинга, BI**, поддерживает:
+
+* Downsampling, gap-fill, retention policy;
+* Native TS-типы (timestamps, intervals);
+* Интеграцию с ML для прогнозов.
 
