--- a/Connections/Incoming/5x04.md
+++ b/Connections/Incoming/5x04.md
@@ -1,1 +1,53 @@
+🔗 **Связи для блока `5.4 ML-движок (ONNX/Tensorflow)` (`ml_runtime`)**
+📦 Пакет: `5. BI, ML, OLAP`
+
+---
+
+### 🔻 Исходящие связи (`ml_runtime --> X`)
+
+| Целевой блок          | Назначение                                             |
+| --------------------- | ------------------------------------------------------ |
+| `sql_executor`        | Вызов ML-моделей через SQL (`INFER FROM`)              |
+| `ml_adapter`          | Интерфейс для интеграции ONNX/TensorFlow/PyTorch       |
+| `jit_engine`          | Оптимизация предсказаний ML на этапе исполнения        |
+| `column_store`        | Чтение входных данных моделей из колонок               |
+| `vectorized_executor` | Подача векторных batch-данных в модели                 |
+| `plan_cache`          | Кэширование предсказаний моделей                       |
+| `quota_manager`       | Контроль использования CPU/GPU-пула                    |
+| `prometheus_exporter` | Экспорт latency/throughput ML-предсказаний             |
+| `audit_logger`        | Логирование вызовов моделей (модель, входы, результат) |
+| `rest_api`            | Внешний доступ к предсказаниям моделей                 |
+| `etl_engine`          | Использование ML в процессе data-prep                  |
+| `tracing_agent`       | Трассировка ML-инференса и точек отказа                |
+
+---
+
+### 🔺 Входящие связи (`X --> ml_runtime`)
+
+| Источник              | Назначение                                   |
+| --------------------- | -------------------------------------------- |
+| `sql_planner`         | Планирование ML-вызовов                      |
+| `sql_parser`          | Распознавание `PREDICT`, `INFER`, `ML APPLY` |
+| `ml_adapter`          | Компиляция и исполнение моделей              |
+| `analytics_functions` | Использование моделей в агрегатах            |
+| `time_series_engine`  | Прогнозирование временных рядов              |
+| `external_hooks`      | Триггер на вызов моделей при событиях        |
+| `schema_evolver`      | Обновление версии моделей                    |
+| `ci_cd_runner`        | Доставка новых моделей через ML CI/CD        |
+
+---
+
+### 🧩 Всего связей: **23**
+
+* Исходящие: **12**
+* Входящие: **11**
+
+---
+
+✅ Блок `5.4 ML-движок` — ядро поддержки **AI/ML-инференса внутри СУБД**, реализует:
+
+* Runtime ONNX/TensorFlow;
+* SQL-интеграцию для inference;
+* JIT-интеграцию для быстрого предсказания;
+* Поддержку ретрейсов, аудит и изоляцию.
 
