--- a/Connections/Incoming/5x05.md
+++ b/Connections/Incoming/5x05.md
@@ -1,1 +1,53 @@
+🔗 **Связи для блока `5.5 Аналитические функции` (`analytics_functions`)**
+📦 Пакет: `5. BI, ML, OLAP`
 
+---
+
+### 🔻 Исходящие связи (`analytics_functions --> X`)
+
+| Целевой блок          | Назначение                                             |
+| --------------------- | ------------------------------------------------------ |
+| `sql_optimizer`       | Расширение логики cost-based для аналитических окон    |
+| `sql_executor`        | Выполнение функций ранжирования, percentiles, lag/lead |
+| `column_store`        | Эффективное выполнение window-функций над колонками    |
+| `adaptive_aggregates` | Построение агрегатов для ранговых функций              |
+| `materialized_views`  | Хранение результатов аналитических расчётов            |
+| `analytic_engine`     | Расширенный backend для аналитических функций          |
+| `jit_engine`          | Компиляция пользовательских аналитических функций      |
+| `plan_cache`          | Повторное использование планов аналитики               |
+| `buffer_pool`         | Кэширование результатов оконных агрегатов              |
+| `tracing_agent`       | Наблюдаемость выполнения аналитических функций         |
+| `audit_logger`        | Логирование аналитических запросов                     |
+| `quota_manager`       | Контроль на нагрузку аналитики по CPU/IOPS             |
+| `rest_api`            | Доступ к аналитике через BI-инструменты                |
+
+---
+
+### 🔺 Входящие связи (`X --> analytics_functions`)
+
+| Источник             | Назначение                                               |
+| -------------------- | -------------------------------------------------------- |
+| `sql_parser`         | Распознавание `RANK`, `PERCENTILE`, `LAG`, `NTILE` и пр. |
+| `sql_planner`        | Включение аналитических функций в execution plan         |
+| `analytic_engine`    | Использование низкоуровневых примитивов                  |
+| `ml_runtime`         | Предобработка данных для ML                              |
+| `time_series_engine` | Расширение временных окон аналитикой                     |
+| `etl_engine`         | Использование при загрузке и трансформации               |
+| `schema_evolver`     | Проверка использования функций при изменениях схем       |
+| `unit_test_engine`   | Верификация корректности ранжирования и окон             |
+| `observability`      | Мониторинг аналитических шагов                           |
+
+---
+
+### 🧩 Всего связей: **22**
+
+* Исходящие: **13**
+* Входящие: **9**
+
+---
+
+✅ Блок `5.5 Аналитические функции` — ключевой компонент для BI/OLAP запросов:
+
+* Поддерживает `WINDOW`, `RANK`, `NTILE`, `PERCENTILE` и др.;
+* Векторизированное и колонковое исполнение;
+* Трассируемость и безопасность через встроенные политики.
