--- a/Connections/Incoming/5x06.md
+++ b/Connections/Incoming/5x06.md
@@ -1,1 +1,54 @@
+🔗 **Связи для блока `5.6 HTAP-модуль` (`htap_manager`)**
+📦 Пакет: `5. BI, ML, OLAP`
 
+---
+
+### 🔻 Исходящие связи (`htap_manager --> X`)
+
+| Целевой блок           | Назначение                                         |
+| ---------------------- | -------------------------------------------------- |
+| `sql_planner`          | Планирование смешанных (OLTP + OLAP) запросов      |
+| `sql_optimizer`        | Адаптивный выбор путей исполнения OLAP/OLTP        |
+| `sql_executor`         | Разделение фаз исполнения на OLTP и аналитические  |
+| `materialized_views`   | Использование предварительно агрегированных данных |
+| `adaptive_aggregates`  | Инкрементальные агрегаты для OLTP-транзакций       |
+| `analytics_functions`  | Анализ OLAP-фрагментов в mixed workload            |
+| `streaming_aggregator` | Онлайновая агрегация изменений                     |
+| `column_store`         | Основной источник для OLAP данных                  |
+| `row_store`            | Поддержка точечных OLTP-операций                   |
+| `etl_engine`           | Построение пайплайнов HTAP-интеграции              |
+| `plan_cache`           | Переиспользование гибридных execution-планов       |
+| `runtime_optimizer`    | Runtime-переключение между OLTP/OLAP-движками      |
+| `tracing_agent`        | Отладка гибридных execution-путей                  |
+| `quota_manager`        | Мониторинг и квотирование HTAP-операций            |
+
+---
+
+### 🔺 Входящие связи (`X --> htap_manager`)
+
+| Источник             | Назначение                                      |
+| -------------------- | ----------------------------------------------- |
+| `sql_parser`         | Определение смешанных запросов                  |
+| `sql_executor`       | Делегирование фрагментов OLAP/OLTP              |
+| `materialized_views` | Интеграция при смешанных update/view            |
+| `buffer_pool`        | Кэш гибридных execution-фрагментов              |
+| `ci_cd_runner`       | A/B-тестирование OLAP против OLTP-планов        |
+| `observability`      | Мониторинг производительности HTAP              |
+| `failover_engine`    | Изоляция HTAP-подсистемы при отказах            |
+| `audit_logger`       | Трассировка смешанных HTAP-путей                |
+| `schema_evolver`     | Обработка миграций, влияющих на OLTP/OLAP схемы |
+
+---
+
+### 🧩 Всего связей: **23**
+
+* Исходящие: **14**
+* Входящие: **9**
+
+---
+
+✅ Блок `5.6 HTAP-модуль` — **ядро смешанной нагрузки**:
+
+* Объединяет транзакционные и аналитические пути;
+* Динамическое переключение исполнения;
+* Поддержка A/B testing и runtime-адаптаций.
