--- a/Connections/Incoming/5x07.md
+++ b/Connections/Incoming/5x07.md
@@ -1,1 +1,51 @@
+🔗 **Связи для блока `5.7 Адаптер ML` (`ml_adapter`)**
+📦 Пакет: `5. BI, ML, OLAP`
 
+---
+
+### 🔻 Исходящие связи (`ml_adapter --> X`)
+
+| Целевой блок          | Назначение                                   |
+| --------------------- | -------------------------------------------- |
+| `ml_runtime`          | Делегирование запросов на выполнение моделей |
+| `sql_executor`        | Вставка предсказаний в SQL-запрос            |
+| `sql_optimizer`       | Расчёт стоимости вызова ML-модели            |
+| `column_store`        | Извлечение признаков для предсказаний        |
+| `analytics_functions` | Предобработка входов: rank, percentiles      |
+| `jit_engine`          | Компиляция user-defined feature pipelines    |
+| `dsl_engine`          | Сценарии с embed-вызовом моделей             |
+| `etl_engine`          | Интеграция инференса в ETL-цепочки           |
+| `plan_cache`          | Кэширование предобученных ML-пайплайнов      |
+| `runtime_optimizer`   | Подстройка стратегий инференса               |
+| `quota_manager`       | Квотирование ML-запросов по CPU/GPU          |
+| `observability`       | Мониторинг latency/accuracy моделей          |
+| `audit_logger`        | Лог ML-вызовов и аудита решений              |
+
+---
+
+### 🔺 Входящие связи (`X --> ml_adapter`)
+
+| Источник              | Назначение                                    |
+| --------------------- | --------------------------------------------- |
+| `sql_parser`          | Распознавание `PREDICT`, `INFER`, `ML_EVAL()` |
+| `ml_runtime`          | Использование адаптера для моделей            |
+| `etl_engine`          | Пайплайны с вызовами `ml_adapter`             |
+| `ci_cd_runner`        | Прогоны моделей при новых версиях             |
+| `schema_evolver`      | Проверка схем признаков / вывода              |
+| `unit_test_engine`    | ML-вызовы в тестовых планах                   |
+| `prometheus_exporter` | Метрики по ML-инференсу                       |
+
+---
+
+### 🧩 Всего связей: **20**
+
+* Исходящие: **13**
+* Входящие: **7**
+
+---
+
+✅ Блок `5.7 Адаптер ML` — **ключевой мост между SQL/BI и ML**:
+
+* Позволяет встроить инференс моделей (ONNX, Tensorflow);
+* Управляет схемами признаков и предсказаний;
+* Интегрируется в `SQL`, `DSL`, `ETL`, `JIT`.
