--- a/Connections/Incoming/5x08.md
+++ b/Connections/Incoming/5x08.md
@@ -1,1 +1,47 @@
+🔗 **Связи для блока `5.8 JIT компилятор` (`jit_engine`)**
+📦 Пакет: `5. BI, ML, OLAP`
 
+---
+
+### 🔻 Исходящие связи (`jit_engine --> X`)
+
+| Целевой блок           | Назначение                            |
+| ---------------------- | ------------------------------------- |
+| `sql_executor`         | Компиляция критических SQL-фрагментов |
+| `ml_adapter`           | Оптимизация фичей и инференса         |
+| `vectorized_executor`  | Ускорение векторных операций          |
+| `streaming_aggregator` | JIT-агрегация и fuse-операции         |
+| `runtime_optimizer`    | Интеграция компиляции по трассам      |
+| `udf_engine`           | JIT-компиляция UDF на Lua/JS          |
+| `pl_lang_runtime`      | Ускорение часто вызываемых процедур   |
+| `analytics_functions`  | Оптимизация оконных функций           |
+| `arrow_runtime`        | Генерация SIMD-кода для Arrow         |
+
+---
+
+### 🔺 Входящие связи (`X --> jit_engine`)
+
+| Источник         | Назначение                          |
+| ---------------- | ----------------------------------- |
+| `sql_planner`    | Пометка JIT-кандидатов              |
+| `sql_optimizer`  | Стоимостная модель для JIT          |
+| `ml_runtime`     | Вызов JIT-пайплайнов                |
+| `schema_evolver` | Инвалидация JIT-кэша при ALTER      |
+| `plan_cache`     | Кэширование скомпилированных планов |
+| `ci_cd_runner`   | Компиляция UDF в pipeline           |
+| `fuzzer_engine`  | Fuzzing JIT-путей                   |
+
+---
+
+### 🧩 Всего связей: **17**
+
+* Исходящие: **9**
+* Входящие: **8**
+
+---
+
+✅ Блок `5.8 JIT компилятор` — **ускорение критических путей**:
+
+* Поддерживает in-memory JIT с генерацией SIMD/AVX кода;
+* Работает совместно с SQL, ML и Vector Engine;
+* Встраивается в cost-based оптимизатор.
