--- a/Connections/Incoming/5x09.md
+++ b/Connections/Incoming/5x09.md
@@ -1,1 +1,50 @@
+🔗 **Связи для блока `5.9 Apache Arrow / PAX runtime` (`arrow_runtime`)**
+📦 Пакет: `5. BI, ML, OLAP`
 
+---
+
+### 🔻 Исходящие связи (`arrow_runtime --> X`)
+
+| Целевой блок           | Назначение                                  |
+| ---------------------- | ------------------------------------------- |
+| `vectorized_executor`  | Использование Arrow-блоков                  |
+| `arrow_executor`       | Делегирование выполнения запросов           |
+| `jit_engine`           | Оптимизация SIMD/JIT по Arrow layout        |
+| `ml_adapter`           | Подготовка данных в Arrow-формате           |
+| `column_store`         | Экспорт колонок в Arrow                     |
+| `etl_engine`           | Загрузка и выгрузка в Arrow/PAX             |
+| `analytics_functions`  | Обработка Arrow-таблиц функциями            |
+| `streaming_aggregator` | Потоковая агрегация по Arrow-блокам         |
+| `for_encoding`         | Использование Arrow Dictionary и RLE        |
+| `arrow_layout`         | Согласование форматов хранения и исполнения |
+
+---
+
+### 🔺 Входящие связи (`X --> arrow_runtime`)
+
+| Источник                | Назначение                               |
+| ----------------------- | ---------------------------------------- |
+| `sql_executor`          | Использование Arrow для результат-сетов  |
+| `pl_lang_runtime`       | Поддержка Arrow в процедурах             |
+| `adaptive_aggregates`   | Хранение агрегатов в Arrow-представлении |
+| `materialized_views`    | Форматирование MV через Arrow            |
+| `row_store`             | Выгрузка в Arrow                         |
+| `cold_storage_fallback` | Экспорт во внешний Arrow-файл            |
+| `external_hooks`        | Arrow как формат внешнего интерфейса     |
+| `grpc_interface`        | gRPC-интеграция через Arrow Flight       |
+| `rest_api`              | Arrow + JSON fallback в REST             |
+
+---
+
+### 🧩 Всего связей: **18**
+
+* Исходящие: **10**
+* Входящие: **8**
+
+---
+
+✅ Блок `5.9 Apache Arrow / PAX runtime` — **оптимальный формат представления в памяти**:
+
+* Используется для межмодульного взаимодействия;
+* Ускоряет векторные вычисления, JIT, ML-инференс;
+* Позволяет интеграцию с внешними системами (gRPC, REST, ETL).
