--- a/Connections/Incoming/6x01.md
+++ b/Connections/Incoming/6x01.md
@@ -1,1 +1,52 @@
+🔐 **Связи для блока `6.1 RBAC/ABAC движок` (`rbac_abac_engine`)**
+📦 Пакет: `6. Безопасность`
+
+---
+
+### 🔻 Исходящие связи (`rbac_abac_engine --> X`)
+
+| Целевой блок       | Назначение                                      |
+| ------------------ | ----------------------------------------------- |
+| `access_control`   | Реализация политик RBAC/ABAC                    |
+| `sql_executor`     | Проверка разрешений при выполнении              |
+| `graphql_api`      | Контроль доступа на уровне GraphQL              |
+| `rest_api`         | Проверка прав API-запросов                      |
+| `cli_shell`        | Ограничение команд в CLI                        |
+| `external_hooks`   | Авторизация вызовов хуков                       |
+| `row_col_security` | Применение политик на уровне строк и колонок    |
+| `dsl_engine`       | Ограничения для пользовательских DSL-сценариев  |
+| `pl_lang_runtime`  | Проверка ролей при вызове процедур              |
+| `quota_manager`    | Привязка квот к ролям и атрибутам               |
+| `openapi_doc`      | Генерация документации с учетом политик доступа |
+| `cdc_streaming`    | Контроль на уровне публикации стримов           |
+
+---
+
+### 🔺 Входящие связи (`X --> rbac_abac_engine`)
+
+| Источник                   | Назначение                          |
+| -------------------------- | ----------------------------------- |
+| `audit_logger`             | Логирование событий доступа         |
+| `tls_mtls_jwt`             | Декодирование ролей из токенов      |
+| `user_auth` (будущий блок) | Авторизация пользователей           |
+| `access_policies`          | Хранилище и правила политик         |
+| `schema_evolver`           | Проверка прав при DDL-изменениях    |
+| `unit_test_engine`         | Тестирование политик безопасности   |
+| `ci_cd_runner`             | Проверка политик в pipeline         |
+| `json_api`                 | Контроль безопасности JSON-запросов |
+
+---
+
+### 🧩 Всего связей: **20**
+
+* Исходящие: **12**
+* Входящие: **8**
+
+---
+
+✅ Блок `6.1 RBAC/ABAC движок` — **центр управления доступом**:
+
+* Гибкая политика прав на основе ролей и атрибутов (ABAC);
+* Встраивается во все слои: SQL, API, процедуры, стриминг;
+* Расширяем через политический движок и интеграцию с JWT/mTLS.
 
