--- a/Connections/Incoming/6x02.md
+++ b/Connections/Incoming/6x02.md
@@ -1,1 +1,49 @@
+🔐 **Связи для блока `6.2 Безопасность строк/колонок` (`row_col_security`)**
+📦 Пакет: `6. Безопасность`
+
+---
+
+### 🔻 Исходящие связи (`row_col_security --> X`)
+
+| Целевой блок          | Назначение                                            |
+| --------------------- | ----------------------------------------------------- |
+| `sql_executor`        | Фильтрация строк и маскирование колонок               |
+| `column_store`        | Маскирование при чтении                               |
+| `row_store`           | Маскирование и фильтрация строк при сканировании      |
+| `graphql_api`         | Обрезка данных в GraphQL-ответах                      |
+| `rest_api`            | Удаление недопустимых атрибутов в JSON                |
+| `odbc_gateway`        | Ограничение видимости на клиенте                      |
+| `jdbc_server`         | Аналогично ODBC — передача только разрешённых колонок |
+| `dsl_engine`          | Применение политик к пользовательским DSL-запросам    |
+| `pl_lang_runtime`     | Маскирование данных внутри процедур                   |
+| `adaptive_aggregates` | Агрегация с учётом фильтра строк                      |
+| `materialized_views`  | Формирование MV с учётом ограничений на данные        |
+
+---
+
+### 🔺 Входящие связи (`X --> row_col_security`)
+
+| Источник           | Назначение                                  |
+| ------------------ | ------------------------------------------- |
+| `rbac_abac_engine` | Источник политик доступа к строкам/колонкам |
+| `access_policies`  | Система хранения правил                     |
+| `quota_manager`    | Политика доступа по потреблению строк       |
+| `schema_evolver`   | Валидация политик при изменении схемы       |
+| `audit_logger`     | Фиксация событий маскировки и отказов       |
+| `unit_test_engine` | Тестирование политик строковой безопасности |
+
+---
+
+### 🧩 Всего связей: **17**
+
+* Исходящие: **11**
+* Входящие: **6**
+
+---
+
+✅ Блок `6.2 Безопасность строк/колонок` реализует:
+
+* **Маскирование и фильтрацию** на уровне запроса;
+* Совместимость с ANSI SQL:2016 Row/Column Security;
+* Интеграцию с RBAC/ABAC, audit, API, MV, агрегацией.
 
