--- a/Connections/Incoming/6x03.md
+++ b/Connections/Incoming/6x03.md
@@ -1,1 +1,46 @@
+🔐 **Связи для блока `6.3 TLS/mTLS/JWT` (`tls_mtls_jwt`)**
+📦 Пакет: `6. Безопасность`
+
+---
+
+### 🔻 Исходящие связи (`tls_mtls_jwt --> X`)
+
+| Целевой блок       | Назначение                             |
+| ------------------ | -------------------------------------- |
+| `jdbc_server`      | Шифрование канала и проверка токенов   |
+| `odbc_gateway`     | Защищённое соединение через TLS        |
+| `rest_api`         | mTLS и JWT-аутентификация для API      |
+| `graphql_api`      | Поддержка токенов и SSL                |
+| `grpc_interface`   | Защита соединений на уровне TLS        |
+| `cli_shell`        | Поддержка сертификатов при запуске     |
+| `external_hooks`   | Верификация входящих вызовов           |
+| `rbac_abac_engine` | Декодирование ролей из JWT             |
+| `access_control`   | Распознавание и обработка токенов      |
+| `audit_logger`     | Журналирование TLS/JWT-событий         |
+| `quota_manager`    | Получение ограничений из атрибутов JWT |
+
+---
+
+### 🔺 Входящие связи (`X --> tls_mtls_jwt`)
+
+| Источник               | Назначение                                |
+| ---------------------- | ----------------------------------------- |
+| `config_loader`        | Загрузка конфигурации TLS и токенов       |
+| `platform_init`        | Инициализация SSL-библиотек и trust store |
+| `bootstrap_controller` | Подключение проверок на этапе запуска     |
+
+---
+
+### 🧩 Всего связей: **14**
+
+* Исходящие: **11**
+* Входящие: **3**
+
+---
+
+✅ Блок `6.3 TLS/mTLS/JWT` — **центральный механизм шифрования и аутентификации**:
+
+* Поддержка TLS 1.3, client certs, JWT, HMAC;
+* Интеграция с RBAC/ABAC, CLI, API, gRPC;
+* Важен для Zero Trust и микросервисных взаимодействий.
 
